logs: services: fix filters alignment
logs: Fix overflowing filters by swiching to compressed filter on bigger breakpoint
These filters breakpoints seem to have changed in PF5.

services: logs: Fix misalignment in toolbar

--- a/pkg/systemd/services.scss
+++ b/pkg/systemd/services.scss
@@ -100,3 +100,8 @@
 .pf-m-grid-md.pf-c-table [data-label] {
   display: revert;
 }
+
+// FIXME: When porting the selects to the PF5 select implementation drop this
+.pf-c-toolbar__item {
+  align-self: center;
+}
